; ModuleID = '/home/carl/AnghaBench/tig/src/extr_map.c_string_map_get.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_map.c_string_map_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_map = type { i8*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @string_map_get(%struct.string_map* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.string_map*, align 8
  %5 = alloca i8*, align 8
  store %struct.string_map* %0, %struct.string_map** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load %struct.string_map*, %struct.string_map** %4, align 8
  %7 = getelementptr inbounds %struct.string_map, %struct.string_map* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %21

10:                                               ; preds = %2
  %11 = load i8*, i8** %5, align 8
  %12 = load %struct.string_map*, %struct.string_map** %4, align 8
  %13 = getelementptr inbounds %struct.string_map, %struct.string_map* %12, i32 0, i32 0
  store i8* %11, i8** %13, align 8
  %14 = load %struct.string_map*, %struct.string_map** %4, align 8
  %15 = getelementptr inbounds %struct.string_map, %struct.string_map* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.string_map*, %struct.string_map** %4, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @htab_hash_string(i8* %18)
  %20 = call i8* @htab_find_with_hash(i64 %16, %struct.string_map* %17, i32 %19)
  store i8* %20, i8** %3, align 8
  br label %22

21:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %22

22:                                               ; preds = %21, %10
  %23 = load i8*, i8** %3, align 8
  ret i8* %23
}

declare dso_local i8* @htab_find_with_hash(i64, %struct.string_map*, i32) #1

declare dso_local i32 @htab_hash_string(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
